<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/qbg"
    tools:context="com.example.user.technothrone.questionPage">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:minLines="2"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:text="Question goes here ... " />


        <LinearLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_below="@id/question">
            <RadioGroup
                android:id="@+id/opt1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_weight="1">
            <RadioButton
                android:id="@+id/optiona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Option A"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="#fff"/>
            <RadioButton
                android:id="@+id/optionc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Option C"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="#fff"/>
            </RadioGroup>
            <RadioGroup
                android:id="@+id/opt2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_weight="1">
                <RadioButton
                    android:id="@+id/optionb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Option B"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="#fff"/>
                <RadioButton
                    android:id="@+id/optiond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Option D"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="#fff"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/timer"
            android:layout_below="@id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/timer"
                android:textSize="20sp"
                android:padding="8dp"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:padding="8dp"
                android:textColor="#000"
                android:text="60s"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/timer"
            android:layout_marginTop="12dp"
            android:background="@color/bidbg"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/BidAccent"
                android:layout_margin="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bidamt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="70dp"
                    android:hint="@string/bid"
                    android:inputType="number"
                    android:gravity="center"
                    android:textColor="#fff"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@color/btn"
                android:text="@string/btn"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="14dp"
                        android:text="@string/bal"
                        android:textColor="@color/white"
                        android:textSize="19sp" />

                    <TextView
                        android:id="@+id/balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingBottom="12dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="26sp"
                        android:text="50,000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="14dp"
                        android:text="@string/pos"
                        android:textColor="@color/white"
                        android:textSize="19sp" />

                    <TextView
                        android:id="@+id/position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingBottom="12dp"
                        android:textColor="@color/white"
                        android:textSize="26sp"
                        android:text="1st" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/bid"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/fotor"
            android:textSize="32sp"
            android:textStyle="bold" />

</RelativeLayout>

</ScrollView>
